LughatDad.java
/* LughatDad.java */
/* Generated By:JavaCC: Do not edit this line. LughatDad.java */
import java.util.HashMap;
import java.util.ArrayList;
import java.util.List;

public class LughatDad implements LughatDadConstants {
    // جدول الرموز لتخزين المتغيرات
    static HashMap<String, Object> symbolTable = new HashMap<String, Object>();

    public static void main(String args[]) {
        try {
            System.setOut(new java.io.PrintStream(System.out, true, "UTF-8"));
            System.setErr(new java.io.PrintStream(System.err, true, "UTF-8"));
        } catch (Exception ex) {}

        if (args.length == 0) {
            LughatDad parser = new LughatDad(System.in, "UTF-8");
            while (true) {
                System.out.println("Reading from standard input...");
                System.out.print("Enter code: ");
                try {
                    switch (LughatDad.one_line()) {
                        case 0 :
                            System.out.println("OK.");
                            break;
                        case 1 :
                            System.out.println("Goodbye.");
                            return;
                        default :
                            break;
                    }
                } catch (Exception e) {
                    System.out.println("NOK.");
                    System.out.println(e.getMessage());
                    LughatDad.ReInit(System.in, "UTF-8");
                } catch (Error e) {
                    System.out.println("Oops.");
                    System.out.println(e.getMessage());
                    break;
                }
            }
        } else {
            try {
                LughatDad parser = new LughatDad(new java.io.FileInputStream(args[0]), "UTF-8");
                while (true) {
                    if (LughatDad.one_line() == 1) {
                        break;
                    }
                }
            } catch (Exception e) {
                System.err.println("Error: " + e.getMessage());
            } catch (Error e) {
                System.err.println("Error: " + e.getMessage());
            }
        }
    }

    // القاعدة الأساسية للعقد في شجرة التحليل المجردة (AST)
    static abstract class Node {
        abstract Object execute();
    }

    // عقدة للكتل البرمجية (Blocks)
    static class BlockNode extends Node {
        List<Node> statements = new ArrayList<Node>();
        void addStatement(Node stmt) { statements.add(stmt); }
        Object execute() {
            for (Node stmt : statements) {
                stmt.execute();
            }
            return null;
        }
    }

    // عقدة لتعريف وتعيين المتغيرات
    static class AssignNode extends Node {
        String varName;
        Node expr;
        boolean isDecl;
        AssignNode(String v, Node e, boolean decl) { varName = v; expr = e; isDecl = decl; }
        Object execute() {
            if (!isDecl && !symbolTable.containsKey(varName)) {
                throw new RuntimeException("\u062e\u0637\u0623: \u0627\u0644\u0645\u062a\u063a\u064a\u0631 \u063a\u064a\u0631 \u0645\u0639\u0631\u0641 \u0645\u0633\u0628\u0642\u0627\u064b -> " + varName);
            }
            Object val = expr.execute();
            symbolTable.put(varName, val);
            return val;
        }
    }

    // عقدة للطباعة
    static class PrintNode extends Node {
        Node expr;
        PrintNode(Node e) { expr = e; }
        Object execute() {
            Object val = expr.execute();
            if (val instanceof Double) {
                double d = (Double) val;
                if (d == (long) d) {
                    System.out.println((long) d);
                } else {
                    System.out.println(d);
                }
            } else {
                System.out.println(val);
            }
            return null;
        }
    }

    // عقدة للجملة الشرطية
    static class IfNode extends Node {
        Node condition;
        Node thenBlock;
        Node elseBlock;
        IfNode(Node c, Node t, Node e) { condition = c; thenBlock = t; elseBlock = e; }
        Object execute() {
            Object cond = condition.execute();
            if (!(cond instanceof Boolean)) {
                throw new RuntimeException("\u062e\u0637\u0623: \u064a\u062c\u0628 \u0623\u0646 \u064a\u0643\u0648\u0646 \u0627\u0644\u0634\u0631\u0637 \u0645\u0646\u0637\u0642\u064a\u0627\u064b (Boolean)");
            }
            if ((Boolean) cond) {
                return thenBlock.execute();
            } else if (elseBlock != null) {
                return elseBlock.execute();
            }
            return null;
        }
    }

    // عقدة لحلقة بينما التكرارية
    static class WhileNode extends Node {
        Node condition;
        Node body;
        WhileNode(Node c, Node b) { condition = c; body = b; }
        Object execute() {
            while (true) {
                Object cond = condition.execute();
                if (!(cond instanceof Boolean)) {
                    throw new RuntimeException("\u062e\u0637\u0623: \u064a\u062c\u0628 \u0623\u0646 \u064a\u0643\u0648\u0646 \u0627\u0644\u0634\u0631\u0637 \u0645\u0646\u0637\u0642\u064a\u0627\u064b (Boolean)");
                }
                if ((Boolean) cond) {
                    body.execute();
                } else {
                    break;
                }
            }
            return null;
        }
    }

    // عقدة للعمليات الحسابية والمنطقية
    static class BinOpNode extends Node {
        Node left, right;
        String op;
        BinOpNode(Node l, String o, Node r) { left = l; op = o; right = r; }
        Object execute() {
            Object lVal = left.execute();
            Object rVal = right.execute();

            // دمج النصوص
            if (op.equals("+")) {
                if (lVal instanceof String || rVal instanceof String) {
                    String s1 = lVal.toString();
                    String s2 = rVal.toString();
                    if (lVal instanceof Double && (Double)lVal == ((Double)lVal).longValue()) s1 = String.valueOf(((Double)lVal).longValue());
                    if (rVal instanceof Double && (Double)rVal == ((Double)rVal).longValue()) s2 = String.valueOf(((Double)rVal).longValue());
                    return s1 + s2;
                }
            }

            // العمليات الحسابية
            if (lVal instanceof Double && rVal instanceof Double) {
                double l = (Double) lVal;
                double r = (Double) rVal;
                if (op.equals("+")) return l + r;
                if (op.equals("-")) return l - r;
                if (op.equals("*")) return l * r;
                if (op.equals("/")) return l / r;
                if (op.equals("^")) return Math.pow(l, r);
                if (op.equals(">")) return l > r;
                if (op.equals("<")) return l < r;
                if (op.equals(">=")) return l >= r;
                if (op.equals("<=")) return l <= r;
                if (op.equals("==")) return l == r;
                if (op.equals("!=")) return l != r;
            }

            // العمليات المنطقية
            if (lVal instanceof Boolean && rVal instanceof Boolean) {
                boolean l = (Boolean) lVal;
                boolean r = (Boolean) rVal;
                if (op.equals("==")) return l == r;
                if (op.equals("!=")) return l != r;
            }

            // مقارنة النصوص
            if (lVal instanceof String && rVal instanceof String) {
                if (op.equals("==")) return lVal.equals(rVal);
                if (op.equals("!=")) return !lVal.equals(rVal);
            }

            throw new RuntimeException("\u062e\u0637\u0623 \u0641\u064a \u062a\u0646\u0641\u064a\u0630 \u0627\u0644\u0639\u0645\u0644\u064a\u0629: " + lVal + " " + op + " " + rVal);
        }
    }

    // عقدة للقيم المباشرة (Literals)
    static class LiteralNode extends Node {
        Object value;
        LiteralNode(Object v) { value = v; }
        Object execute() { return value; }
    }

    // عقدة للوصول لمتغير
    static class VarAccessNode extends Node {
        String varName;
        VarAccessNode(String v) { varName = v; }
        Object execute() {
            if (!symbolTable.containsKey(varName)) {
                throw new RuntimeException("\u062e\u0637\u0623: \u0627\u0644\u0645\u062a\u063a\u064a\u0631 \u063a\u064a\u0631 \u0645\u0639\u0631\u0641 \u0645\u0633\u0628\u0642\u0627\u064b -> " + varName);
            }
            return symbolTable.get(varName);
        }
    }

  static final public int one_line() throws ParseException {Node n = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:
    case PRINT:
    case IF:
    case WHILE:
    case ID:
    case LBRACE:{
      n = Statement();
if (n != null) n.execute();
    {if ("" != null) return 0;}
      break;
      }
    case 0:{
      jj_consume_token(0);
{if ("" != null) return 1;}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Node Statement() throws ParseException {Node n = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      n = Declaration();
      break;
      }
    case ID:{
      n = Assignment();
      break;
      }
    case PRINT:{
      n = PrintStmt();
      break;
      }
    case IF:{
      n = IfStmt();
      break;
      }
    case WHILE:{
      n = WhileStmt();
      break;
      }
    case LBRACE:{
      n = Block();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

  static final public Node Block() throws ParseException {BlockNode block = new BlockNode();
    Node stmt;
    jj_consume_token(LBRACE);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:
      case PRINT:
      case IF:
      case WHILE:
      case ID:
      case LBRACE:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      stmt = Statement();
block.addStatement(stmt);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return block;}
    throw new Error("Missing return statement in function");
}

  static final public Node Declaration() throws ParseException {Token t;
    Node expr;
    jj_consume_token(VAR);
    t = jj_consume_token(ID);
    jj_consume_token(ASSIGN);
    expr = Expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMI:{
      jj_consume_token(SEMI);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
{if ("" != null) return new AssignNode(t.image, expr, true);}
    throw new Error("Missing return statement in function");
}

  static final public Node Assignment() throws ParseException {Token t;
    Node expr;
    t = jj_consume_token(ID);
    jj_consume_token(ASSIGN);
    expr = Expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMI:{
      jj_consume_token(SEMI);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
{if ("" != null) return new AssignNode(t.image, expr, false);}
    throw new Error("Missing return statement in function");
}

  static final public Node PrintStmt() throws ParseException {Node expr;
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    expr = Expression();
    jj_consume_token(RPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMI:{
      jj_consume_token(SEMI);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return new PrintNode(expr);}
    throw new Error("Missing return statement in function");
}

  static final public Node IfStmt() throws ParseException {Node cond, thenStmt, elseStmt = null;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    cond = Expression();
    jj_consume_token(RPAREN);
    thenStmt = Statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      elseStmt = Statement();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
{if ("" != null) return new IfNode(cond, thenStmt, elseStmt);}
    throw new Error("Missing return statement in function");
}

  static final public Node WhileStmt() throws ParseException {Node cond, body;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    cond = Expression();
    jj_consume_token(RPAREN);
    body = Statement();
{if ("" != null) return new WhileNode(cond, body);}
    throw new Error("Missing return statement in function");
}

  static final public Node Expression() throws ParseException {Node n;
    n = EqualityExpr();
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

  static final public Node EqualityExpr() throws ParseException {Node n, r; Token op;
    n = RelationalExpr();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:
      case NEQ:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:{
        op = jj_consume_token(EQ);
        break;
        }
      case NEQ:{
        op = jj_consume_token(NEQ);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      r = RelationalExpr();
n = new BinOpNode(n, op.image, r);
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

  static final public Node RelationalExpr() throws ParseException {Node n, r; Token op;
    n = sum();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GT:
    case LT:
    case GTE:
    case LTE:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case GT:{
        op = jj_consume_token(GT);
        break;
        }
      case LT:{
        op = jj_consume_token(LT);
        break;
        }
      case GTE:{
        op = jj_consume_token(GTE);
        break;
        }
      case LTE:{
        op = jj_consume_token(LTE);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      r = sum();
n = new BinOpNode(n, op.image, r);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

  static final public Node sum() throws ParseException {Node n, r; Token op;
    n = term();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      r = term();
n = new BinOpNode(n, op.image, r);
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

  static final public Node term() throws ParseException {Node n, r; Token op;
    n = power();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:{
        op = jj_consume_token(MULT);
        break;
        }
      case DIV:{
        op = jj_consume_token(DIV);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      r = power();
n = new BinOpNode(n, op.image, r);
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

  static final public Node power() throws ParseException {Node n, r; Token op;
    n = unary();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case POWER:{
      op = jj_consume_token(POWER);
      r = power();
n = new BinOpNode(n, op.image, r);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

  static final public Node unary() throws ParseException {Node n; Token op;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MINUS:{
      op = jj_consume_token(MINUS);
      n = element();
{if ("" != null) return new BinOpNode(new LiteralNode(0.0), "-", n);}
      break;
      }
    case TRUE:
    case FALSE:
    case ID:
    case NUMBER:
    case STRING_LITERAL:
    case LPAREN:{
      n = element();
{if ("" != null) return n;}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Node element() throws ParseException {Token t; Node n;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:{
      t = jj_consume_token(NUMBER);
{if ("" != null) return new LiteralNode(Double.parseDouble(t.image));}
      break;
      }
    case STRING_LITERAL:{
      t = jj_consume_token(STRING_LITERAL);
{if ("" != null) return new LiteralNode(t.image.substring(1, t.image.length() - 1));}
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
{if ("" != null) return new LiteralNode(true);}
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
{if ("" != null) return new LiteralNode(false);}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
{if ("" != null) return new VarAccessNode(t.image);}
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      n = Expression();
      jj_consume_token(RPAREN);
{if ("" != null) return n;}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public LughatDadTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x400025c1,0x400025c0,0x400025c0,0x0,0x0,0x0,0x200,0x1800000,0x1800000,0x6600000,0x6600000,0x30000,0x30000,0xc0000,0xc0000,0x100000,0x1002f800,0x1000f800,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x1,0x1,0x1,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
	}

  /** Constructor with InputStream. */
  public LughatDad(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public LughatDad(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new LughatDadTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public LughatDad(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new LughatDadTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new LughatDadTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public LughatDad(LughatDadTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(LughatDadTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }
